# worldquantAlpha-dev

./: .env.example  .gitignore  CHANGELOG.md  README.md  api_exploration.json  datafields_search.json  extract_crawl.py  extract_spa.py  pyproject.toml  run_batch3.py  start_ui.bat  test_alpha_result.json
.github/: copilot-instructions.md
config/: agent_profiles.yaml  ai_dispatch.yaml  ai_providers.yaml  alpha_gen.yaml  analysis.yaml  bus.yaml  composition_recipes_seed.yaml  context_templates.yaml  crawl_targets.yaml  crawler.yaml  data_analysis.yaml  datasets.yaml  defaults.yaml  memory.yaml  orchestrator.yaml  settings.json  submission.yaml  summarizer.yaml  tasks.yaml  testing.yaml  topics.yaml  triggers.yaml  workflow.yaml
docs/: 00_从零理解BRAIN平台与FE表达式.md  01_量化交易与BRAIN平台概述.md  02_Fast_Expression_语言指南.md  03_运算符完整参考手册.md  04_模拟设置详解.md  05_性能指标与提交标准.md  06_数据字段与数据集.md  07_Alpha开发实战指南.md  08_API接口与自动化脚本.md  09_学习路径与Challenge得分指南.md  10_实战Alpha测试报告.md  11_进阶Alpha知识与策略.md  12_community_insights_and_alpha_experience.md  13_alpha_defects_and_community_wisdom.md  manifest.generated.yaml  manifest.yaml  plan_phase2.md  plan_v3.md
scripts/: _abort_running.py  _ai_today.py  _audit_state.py  _clean_stale.py  _inspect_aggen.py  _inspect_alphas.py  _inspect_kb_alphas.py  _inspect_prompt.py  _near_miss.py  _show_batch6.py  _task_status.py  _test_copilot_adapter.py  _topic_counts.py  alpha_batch_generator.py  analyze_submissions.py  analyze_unsubmitted.py  audit_traceability.py  backfill_crawl_docs.py  batch1_run.py  boundary_tests.py  build_final_kb.py  build_knowledge_base.py  (+64 more)
(+130 files in other folders)
